@startuml

!include Graphic.puml

class Token {
    - token: String
}

class MyNoun
class MyVerb
class MyAdjective

class MyDictionary

class Template {
    - template: String
}

class TemplatesLibrary

class Generator

MyNoun -|> Token
MyVerb -|> Token
MyAdjective -|> Token

MyDictionary "1" *-- "*" MyNoun
MyDictionary "1" *-- "*" MyVerb
MyDictionary "1" *-- "*" MyAdjective


Template "1" -- "*" MyNoun
Template "1" -- "*" MyVerb
Template "1" -- "*" MyAdjective

TemplatesLibrary "1" -- "*" Template

Generator "1" -- "1" MyDictionary
Generator "1" -- "1" TemplatesLibrary
Generator "1" -- "1" Template

@enduml
